--- a/index.html
+++ b/index.html
@@ -44,17 +44,57 @@
             
         </section>
         <section id="projects">
-            <h1>
-                Aktuelle <span class="special_letter">Projekte</span>
-            </h1>
-            <div class="projects">
-                <div class="project_item">
-                    <div class="project_info">
-                        <h1></h1>
-                        <h2></h3>
-                    </div>
-                    <div class="project_image">
+            <div class="projects_container">
+                <div class="projects_header">
+                    <h1>
+                        Aktuelle <span class="special_letter">Projekte</span>
+                    </h1>
+                </div>
+                <!-- cards für die projekt -->
+                <div class="all_projects">
+                    <div class="project_item">
+                        <div class="project_info">
+                            <h1>Projekt 1</h1>
+                            <h2>Clipboard Landingpage</h2>
 
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quaerat magni assumenda consectetur odio perferendis aut fugit praesentium ratione placeat perspiciatis id esse quod, quae delectus a veritatis itaque minima!</p>
+                        </div>
+                        <div class="project_image">
+                            <img src="./resources/images/portfolio_clipboard_image_project.png" alt="Project 1: Landingpage">
+                        </div>
+                    </div>
+                    <div class="project_item">
+                        <div class="project_info">
+                            <h1>Projekt 1</h1>
+                            <h2>Clipboard Landingpage</h2>
+
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quaerat magni assumenda consectetur odio perferendis aut fugit praesentium ratione placeat perspiciatis id esse quod, quae delectus a veritatis itaque minima!</p>
+                        </div>
+                        <div class="project_image">
+                            <img src="./resources/images/portfolio_clipboard_image_project.png" alt="Project 1: Landingpage">
+                        </div>
+                    </div>
+                    <div class="project_item">
+                        <div class="project_info">
+                            <h1>Projekt 1</h1>
+                            <h2>Clipboard Landingpage</h2>
+
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quaerat magni assumenda consectetur odio perferendis aut fugit praesentium ratione placeat perspiciatis id esse quod, quae delectus a veritatis itaque minima!</p>
+                        </div>
+                        <div class="project_image">
+                            <img src="./resources/images/portfolio_clipboard_image_project.png" alt="Project 1: Landingpage">
+                        </div>
+                    </div>
+                    <div class="project_item">
+                        <div class="project_info">
+                            <h1>Projekt 1</h1>
+                            <h2>Clipboard Landingpage</h2>
+
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quaerat magni assumenda consectetur odio perferendis aut fugit praesentium ratione placeat perspiciatis id esse quod, quae delectus a veritatis itaque minima!</p>
+                        </div>
+                        <div class="project_image">
+                            <img src="./resources/images/portfolio_clipboard_image_project.png" alt="Project 1: Landingpage">
+                        </div>
                     </div>
                 </div>
             </div>
