Responsive Navbar hinzugefügt.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/all.css">
     <title>Carsten Höschele | Portfolio</title>
 </head>
 <body>
@@ -26,9 +27,10 @@
                             <li><a href="#contacts" class="navbar_menu">Contact Me</a></li>
                         </ul>
                     </div>
+                    <i class='fas fa-bars' id="burger"></i>
                 </nav>
                 <div class="hero_section">
-                    <div>
+                    <div class="hero_hook">
                         <h1 class="hook">Hallo,<span></span></h1>
                         <h1 class="hook">ich bin<span></span></h1>
                         <h1 class="hook" >Carsten<span></span></h1>
@@ -43,14 +45,14 @@
         <section id="about_me">
             
         </section>
-        <section id="projects">
+        <!-- <section id="projects">
             <div class="projects_container">
                 <div class="projects_header">
                     <h1>
                         Aktuelle <span class="special_letter">Projekte</span>
                     </h1>
                 </div>
-                <!-- cards für die projekt -->
+
                 <div class="all_projects">
                     <div class="project_item">
                         <div class="project_info">
@@ -98,7 +100,8 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
+    <script src="./resources/js/app.js"></script>
 </body>
 </html>
